# Nornikel

./: README.md  app.py  docker-compose.local.yml  docker-compose.yml  pyproject.toml
configs/: .env.example  Environment.py  Qdrant.py
ml/: constants.py  indexing.py  lifespan.py  llm.py
repositories/: embedding.py  integration.py  qdrant.py
repositories/mixins/: crud.py
routing/v1/: indexing.py  search.py
schemas/: integrations.py  minio.py  processor.py  search.py
services/: indexing.py  minio.py  search.py
